# ACE-implementaion

./: .gitignore  README.md  package-lock.json  pyproject.toml  start.ps1  start.sh
src/: main.py  mainshow.py
src/datasets/: .gitignore  dataset_load.ipynb  imagenetto.ipynb  pyproject.toml
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/pages/MainPage/: MainPage.css  MainPage.jsx
src/models/CNN/: .gitignore  extract_embedding.py  imagenetto.ipynb  model.py  pyproject.toml
src/models/KMeans/: kmeans.py
src/models/SLIC/: super_pixel_segmentation.py  test.py  test_crop.py  test_slic.py
src/models/TCAV/: main.py
