[project]
name = "ace-implementaion"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
