[project]
name = "cnn"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "setuptools>=80.10.2",
    "tb-nightly>=2.21.0a20251023",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
